--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -15,6 +15,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Generate processed data
+        run: |
+          python scripts/run_data_pipeline.py
       - name: Run tests
         run: |
           pytest
