--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -17,20 +17,13 @@ jobs:
           pip install -r requirements.txt
       - name: Generate processed data
         run: |
-          # Check if processed data files already exist
-          if [ -f "data/processed/Fraud_Data_cleaned.csv" ] && [ -f "data/processed/creditcard_cleaned.csv" ] && \
-             [ -f "data/processed/Fraud_Data_features.csv" ] && [ -f "data/processed/Fraud_X_train.csv" ] && \
-             [ -f "data/processed/Credit_X_train.csv" ]; then
-            echo "Processed data files already exist, skipping pipeline generation."
-          else
-            # Check if raw data files exist
-            if [ -f "data/raw/Fraud_Data.csv" ] && [ -f "data/raw/creditcard.csv" ] && [ -f "data/raw/IpAddress_to_Country.csv" ]; then
-              echo "Raw data files found, running data pipeline..."
-              python scripts/run_data_pipeline.py
-            else
-              echo "Warning: Raw data files not found. Tests will be skipped if processed data is missing."
-            fi
-          fi
+          # 1. Create sample raw data if missing (necessary for CI since data/ is gitignored)
+          echo "Checking for raw data..."
+          python scripts/create_test_data.py
+          
+          # 2. Run the full data pipeline to generate processed files
+          echo "Running data processing pipeline..."
+          python scripts/run_data_pipeline.py
       - name: Run tests
         run: |
           python -m pytest tests/ -v --tb=short
